// Copyright 2024 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

option go_package = "infra/cros/botsregulator/protos;protos";

package protos;

message Migration {
    Config config = 1;
}

message Config {
    int32 min_cloudbots_percentage = 1;
    int32 min_low_risk_models_percentage = 2;
    repeated string low_risk_models = 3;
    repeated string exclude_duts = 4;
    repeated Override overrides = 5;
}

message Override {
    string board = 1;
    string model = 2;
    int32 amount = 3;
}